added html/css and made responsive

--- a/index.html
+++ b/index.html
@@ -13,5 +13,35 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body class="ff-primary body-bg">
+    <main>
+      <section class="card">
+        <div class="card-info blue-1-bg">
+          <h1 class="tp-1 white">
+            Get <span class="purple">insights</span> that help your business
+            grow.
+          </h1>
+          <p class="tp-3 blue-2 card-para">
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </p>
+          <div class="stats">
+            <div class="stat">
+              <h2 class="tp-2 white">10k+</h2>
+              <p class="tp-4 blue-2">companies</p>
+            </div>
+            <div class="stat">
+              <h2 class="tp-2 white">314</h2>
+              <p class="tp-4 blue-2">templates</p>
+            </div>
+            <div class="stat">
+              <h2 class="tp-2 white">12M+</h2>
+              <p class="tp-4 blue-2">queries</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-img"></div>
+      </section>
+    </main>
+  </body>
 </html>
